# CHRONOS

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  SETUP.md  test.py
docs/: DECISIONS.md
include/chronos/: ast_indexer.hpp  codex.hpp  context_builder.hpp  git_indexer.hpp  ipc.hpp  mmr.hpp  oracle.hpp  ppr.hpp  rrf.hpp  simhash.hpp  vector_index.hpp
scripts/: pre-commit
src/: ast_indexer.cpp  codex.cpp  context_builder.cpp  git_indexer.cpp  ipc.cpp  main_cli.cpp  main_daemon.cpp  main_indexer.cpp  mmr.cpp  oracle.cpp  ppr.cpp  rrf.cpp  simhash.cpp  vector_index.cpp
tests/: CMakeLists.txt  test_codex_alias.cpp  test_framework.hpp  test_main.cpp  test_mmr.cpp  test_oracle_harness.cpp  test_simhash.cpp
